istio-multi-cluster/vs.yaml
# cluster 2
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - hello.bar.svc.cluster.local
  http:
  - route:
    - destination:
        host: hello.bar.svc.
        subset: v1
      weight: 90
    - destination:
        host: hello.bar.svc.cluster.local
        subset: v2
      weight: 10
